--- a/contact.html
+++ b/contact.html
@@ -7,9 +7,9 @@
   <body>
     <h1>My Contact Details</h1>
     <p>Jacob Lockwood</p>
-    <p>Cell: (520)-275-0144</p>
-    <p>Work: (520)-570-2455</p>
-    <p>email: ascion87@gmail.com</p>
+    <p>Cell: (520)-123-4567</p>
+    <p>Work: (520)-321-7654</p>
+    <p>email: blargblarg@gmail.com</p>
 <hr>
 <form action="mailto:" method="post" enctype="text/plain">
 <!--
