--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Contact Us</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <h1>My Contact Details</h1>
     <p>Jacob Lockwood</p>
     <p>Cell: (520)-123-4567</p>
-    <p>Work: (520)-321-7654</p>
-    <p>email: blargblarg@gmail.com</p>
+    <p>Work: (520)-578-3590</p>
+    <p>email: ascion87@gmail.com</p>
 <hr>
 <form action="mailto:" method="post" enctype="text/plain">
 <!--
