--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Jacob's Personal Site</title>
+  <link rel="stylesheet" href="css/styles.css">
+
 </head>
 
 <body>
@@ -144,9 +146,13 @@
   </tr>
 </table>
 <hr>
-<a href="hobbies.html">My Hobbies</a>
-<p></p>
-<a href="contact.html">Contact Me</a>
+
+<table>
+  <tr>
+    <td><a href="hobbies.html">My Hobbies</a></td>
+    <td><a href="contact.html">Contact Me</a></td>
+  </tr>
+</table>
 </body>
 
 </html>
