--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Jacob's Personal Site</title>
-  <link rel="stylesheet" href="https://ascion87.github.io/cv/css/styles.css ">
+  <link rel="stylesheet" href="styles.css ">
 
 </head>
 
